--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@commitlint/cli": "^17.6.5",
+        "@commitlint/config-conventional": "^17.6.5",
         "@types/jest": "^29.5.2",
         "jest": "^29.5.0",
         "react": "^18.2.0",
@@ -21,10 +23,10 @@
     "devDependencies": {
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
-        "@typescript-eslint/eslint-plugin": "^5.59.0",
-        "@typescript-eslint/parser": "^5.59.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.9",
+        "@typescript-eslint/parser": "^5.59.9",
         "@vitejs/plugin-react-swc": "^3.0.0",
-        "eslint": "^8.38.0",
+        "eslint": "^8.42.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
         "husky": "^8.0.3",
