--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
         "test": "jest",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "prettier": "prettier --write ."
     },
     "dependencies": {
         "@commitlint/cli": "^17.6.5",
         "@commitlint/config-conventional": "^17.6.5",
         "@types/jest": "^29.5.2",
         "jest": "^29.5.0",
+        "prettier": "^2.8.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
