--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
         "@commitlint/cli": "^17.6.5",
         "@commitlint/config-conventional": "^17.6.5",
         "@types/jest": "^29.5.2",
+        "autoprefixer": "^10.4.14",
         "jest": "^29.5.0",
+        "postcss": "^8.4.24",
         "prettier": "^2.8.8",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "tailwindcss": "^3.3.2"
     },
     "devDependencies": {
         "@types/react": "^18.0.37",
