--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "dependencies": {
         "@commitlint/cli": "^17.6.5",
         "@commitlint/config-conventional": "^17.6.5",
-        "@types/jest": "^29.5.2",
         "autoprefixer": "^10.4.14",
         "jest": "^29.5.0",
         "postcss": "^8.4.24",
         "prettier": "^2.8.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.3.2"
+        "tailwindcss": "^3.3.2",
+        "vite-plugin-svgr": "^3.2.0"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.2",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^5.59.9",
