--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "dependencies": {
         "@commitlint/cli": "^17.6.5",
         "@commitlint/config-conventional": "^17.6.5",
+        "@reduxjs/toolkit": "^1.9.5",
         "autoprefixer": "^10.4.14",
         "jest": "^29.5.0",
         "postcss": "^8.4.24",
         "prettier": "^2.8.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.0.7",
         "tailwindcss": "^3.3.2",
         "vite-plugin-svgr": "^3.2.0"
     },
